# BMPxx

./: .gitignore  CMakeLists.txt  README.md
include/: bmpxx.hpp
src/: decode.cpp  encode.cpp  shared.cpp
test/: main.cpp
